--- a/aula013/ex012.html
+++ b/aula013/ex012.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS</title>
+    <title>Hora do dia</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="carregar()">
     <header>
         <h1>Hora do dia</h1>
     </header>
     <section>
-        <div>
-            div numero 1
+        <div id="msg">
+            mensagem
         </div>
-        <div>
-            div numero 2
+        <div id="foto">
+            <img id="imagem" src="imagens/manha.png" alt="manha">
         </div>
     </section>
     <footer>
